Fix z-index of sticy nav

--- a/sass/global_nav.sass
+++ b/sass/global_nav.sass
@@ -35,6 +35,7 @@
   top: 0
   left: 0
   width: 100%
+  z-index: 100
   ul
     margin: 0 auto
 
